--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="flickeringText">Fuck you Linus</div>
-    <audio id="audio" src="audio.mp3" preload="auto"></audio>
+    <audio id="audio" src="https://cdn.discordapp.com/attachments/1032350331985723542/1053837164066115605/Clown_Horn_Sound_Effect.mp3" preload="auto"></audio>
 
     <script>
       const textElement = document.getElementById("flickeringText");
