--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           if (tally > 69) {
             tally = 69;
           }
-          tallyElement.textContent = `Tally: ${tally}/69`;
+          tallyElement.textContent = `Fucks given to Linus: ${tally}/69`;
         });
       });
     </script>
