--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="flickeringText">Fuck you Linus</div>
     <div class="flickeringText">Fuck you Linus</div>
     <audio id="audio" src="https://cdn.discordapp.com/attachments/1032350331985723542/1053837164066115605/Clown_Horn_Sound_Effect.mp3" preload="auto"></audio>
-    <div id="tally">Fucks Given to Linus: 0</div>
+    <div id="tally">Fucks given to Linus: 0/69</div>
 
     <script>
       const textElements = document.querySelectorAll(".flickeringText");
