--- a/index.html
+++ b/index.html
@@ -14,24 +14,6 @@
         top: 0;
         left: 0;
       }
-      #box {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 500px;
-        height: 500px;
-        background-color: white;
-        border-radius: 5px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
-      #box img {
-        width: 300px;
-        height: 300px;
-      }
     </style>
   </head>
   <body>
@@ -41,50 +23,13 @@
     <div class="flickeringText">Fuck you Linus</div>
     <div class="flickeringText">Fuck you Linus</div>
     <audio id="audio" src="https://cdn.discordapp.com/attachments/1032350331985723542/1053837164066115605/Clown_Horn_Sound_Effect.mp3" preload="auto"></audio>
-    <div id="tally">Fucks Given to Linus: 0</div>
-    <div id="box" style="display: none;">
-      <h2>Good job, you fucked Linus</h2>
-      <img src="image-url" alt="Linus">
-      <p>Wish to fuck him faster?</p>
-      <button id="refreshButton">Refresh</button>
-    </div>
+    <div id="tally">Fucks given to Linus: 0/69</div>
 
     <script>
       const textElements = document.querySelectorAll(".flickeringText");
       const audioElement = document.getElementById("audio");
       const tallyElement = document.getElementById("tally");
-      const boxElement = document.getElementById('box');
-      const refreshButton = document.getElementById('refreshButton');
       let tally = 0;
-      
-      const boxElement = document.createElement('div');
-      boxElement.id = 'box';
-      boxElement.style.position = 'absolute';
-      boxElement.style.top = '50%';
-      boxElement.style.left = '50%';
-      boxElement.style.transform = 'translate(-50%, -50%)';
-      boxElement.style.width = '500px';
-      boxElement.style.height = '500px';
-      boxElement.style.backgroundColor = 'white';
-      boxElement.style.borderRadius = '5px';
-      boxElement.style.display = 'flex';
-      boxElement.style.flexDirection = 'column';
-      boxElement.style.alignItems = 'center';
-      boxElement.style.justifyContent = 'center';
-
-      boxElement.innerHTML = `
-        <h2>Good job, you fucked Linus</h2>
-        <img src="image-url" alt="Linus" style="width: 300px; height: 300px;">
-        <p>Wish to fuck him faster?</p>
-        <button id="refreshButton">Refresh</button>
-      `;
-
-      document.body.appendChild(boxElement);
-
-      const refreshButton = document.getElementById('refreshButton');
-      refreshButton.addEventListener('click', function() {
-        window.location.reload();
-      });
 
       textElements.forEach(function(element, index) {
         const interval = Math.random() * 100 + 300;
@@ -94,10 +39,6 @@
           element.style.fontSize = Math.random() * 50 + "px";
         }, interval);
       });
-
-      refreshButton.addEventListener('click', function() {
-    window.location.reload();
-  });
 
       textElements.forEach(function(element) {
         element.addEventListener("click", function() {
