--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<html>
+<html>
   <head>
     <style>
       body {
@@ -37,34 +37,34 @@
     <div class="box" id="box" style="display: none;"></div>
 
     <script>
-        const textElements = document.querySelectorAll(".flickeringText");
-        const audioElement = document.getElementById("audio");
-        const tallyElement = document.getElementById("tally");
-        let tally = 0;
+      const textElements = document.querySelectorAll(".flickeringText");
+      const audioElement = document.getElementById("audio");
+      const tallyElement = document.getElementById("tally");
+      let tally = 0;
 
-        textElements.forEach(function(element, index) {
-          const interval = Math.random() * 100 + 300;
-          setInterval(function() {
-            element.style.left = Math.random() * window.innerWidth + "px";
-            element.style.top = Math.random() * window.innerHeight + "px";
-            element.style.fontSize = Math.random() * 50 + "px";
-          }, interval);
-        });
+      textElements.forEach(function(element, index) {
+        const interval = Math.random() * 100 + 300;
+        setInterval(function() {
+          element.style.left = Math.random() * window.innerWidth + "px";
+          element.style.top = Math.random() * window.innerHeight + "px";
+          element.style.fontSize = Math.random() * 50 + "px";
+        }, interval);
+      });
 
-        textElements.forEach(function(element) {
-          element.addEventListener("click", function() {
-            const audioClone = audioElement.cloneNode();
-            audioClone.play();
-            tally++;
-            if (tally > 69) {
-              tally = 69;
-            }
-            tallyElement.textContent = `Fucks given to Linus: ${tally}/69`;
-            if (tally >= 69) {
-              document.getElementById("box").style.display = "block";
-            }
-          });
+      textElements.forEach(function(element) {
+        element.addEventListener("click", function() {
+          const audioClone = audioElement.cloneNode();
+          audioClone.play();
+          tally++;
+          if (tally > 69) {
+            tally = 69;
+          }
+          tallyElement.textContent = `Fucks given to Linus: ${tally}/69`;
+          if (tally >= 69) {
+            document.getElementById("box").style.display = "block";
+          }
         });
-      </script>
+      });
+    </script>
   </body>
 </html>
