--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         height: 100px;
         background-color: rgb(64, 64, 64);
         border: 10px solid rgb(32, 32, 32);
+        border-radius: 50%; /* add this line to make the border curved */
         position: absolute;
         top: 50%;
         left: 50%;
