--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         left: 0;
       }
       .box {
-        width: 100px;
-        height: 100px;
+        width: calc(50vw);
+        height: calc(50vh);
         background-color: rgb(64, 64, 64);
         border: 10px solid rgb(32, 32, 32);
-        border-radius: 50%; /* add this line to make the border curved */
+        border-radius: 50%;
         position: absolute;
         top: 50%;
         left: 50%;
