--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         width: calc(50vw);
         height: calc(50vh);
         background-color: rgb(64, 64, 64);
-        border: 10px solid rgb(32, 32, 32);
+        border: calc(5vw) solid rgb(32, 32, 32);
         border-radius: 50%;
         position: absolute;
         top: 50%;
