--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         width: calc(50vw);
         height: calc(50vh);
         background-color: rgb(64, 64, 64);
-        border: calc(5vw) solid rgb(32, 32, 32);
-        border-radius: 50%;
+        border: calc(3vw) solid rgb(32, 32, 32);
+        border-radius: 0; /* set the border-radius to 0 to make only the border curved */
         position: absolute;
         top: 50%;
         left: 50%;
