--- a/index.html
+++ b/index.html
@@ -43,39 +43,6 @@
       const tallyElement = document.getElementById("tally");
       let tally = 0;
 
-      let fPressed = false;
-      let aPressed = false;
-      let gPressed = false;
-
-      document.addEventListener("keydown", function(event) {
-        if (event.code === "KeyF") {
-          fPressed = true;
-        }
-        if (event.code === "KeyA") {
-          aPressed = true;
-        }
-        if (event.code === "KeyG") {
-          gPressed = true;
-        }
-
-        if (fPressed && aPressed && gPressed) {
-          tally = 69;
-          tallyElement.textContent = `Fucks given to Linus: ${tally}/69`;
-        }
-      });
-
-      document.addEventListener("keyup", function(event) {
-        if (event.code === "KeyF") {
-          fPressed = false;
-        }
-        if (event.code === "KeyA") {
-          aPressed = false;
-        }
-        if (event.code === "KeyG") {
-          gPressed = false;
-        }
-      });
-
       textElements.forEach(function(element, index) {
         const interval = Math.random() * 100 + 300;
         setInterval(function() {
@@ -90,8 +57,11 @@
           const audioClone = audioElement.cloneNode();
           audioClone.play();
           tally++;
+          if (tally > 69) {
+            tally = 69;
+          }
           tallyElement.textContent = `Fucks given to Linus: ${tally}/69`;
-          if (tally === 69) {
+          if (tally >= 69) {
             document.getElementById("box").style.display = "block";
           }
         });
