--- a/index.html
+++ b/index.html
@@ -38,34 +38,54 @@
     <div class="box" id="box" style="display: none;"></div>
 
     <script>
-      const textElements = document.querySelectorAll(".flickeringText");
-      const audioElement = document.getElementById("audio");
-      const tallyElement = document.getElementById("tally");
-      let tally = 0;
+        const textElements = document.querySelectorAll(".flickeringText");
+        const audioElement = document.getElementById("audio");
+        const tallyElement = document.getElementById("tally");
+        const boxElement = document.getElementById("box");
+        let tally = 0;
+        let fPressed = false;
+        let aPressed = false;
+        let gPressed = false;
 
-      textElements.forEach(function(element, index) {
-        const interval = Math.random() * 100 + 300;
-        setInterval(function() {
-          element.style.left = Math.random() * window.innerWidth + "px";
-          element.style.top = Math.random() * window.innerHeight + "px";
-          element.style.fontSize = Math.random() * 50 + "px";
-        }, interval);
-      });
+        textElements.forEach(function(element) {
+          element.addEventListener("click", function() {
+            const audioClone = audioElement.cloneNode();
+            audioClone.play();
+            tally++;
+            if (tally > 69) {
+              tally = 69;
+            }
+            tallyElement.textContent = `Fucks given to Linus: ${tally}/69`;
+          });
+        });
 
-      textElements.forEach(function(element) {
-        element.addEventListener("click", function() {
-          const audioClone = audioElement.cloneNode();
-          audioClone.play();
-          tally++;
-          if (tally > 69) {
-            tally = 69;
+        document.addEventListener('keydown', (event) => {
+          if (event.key === 'f') {
+            fPressed = true;
+          } else if (event.key === 'a') {
+            aPressed = true;
+          } else if (event.key === 'g') {
+            gPressed = true;
           }
-          tallyElement.textContent = `Fucks given to Linus: ${tally}/69`;
-          if (tally >= 69) {
-            document.getElementById("box").style.display = "block";
+
+          if (fPressed && aPressed && gPressed) {
+            if (boxElement.style.display === "block") {
+              boxElement.style.display = "none";
+            } else {
+              boxElement.style.display = "block";
+            }
+           }
+        });
+
+        document.addEventListener('keyup', (event) => {
+          if (event.key === 'f') {
+            fPressed = false;
+          } else if (event.key === 'a') {
+            aPressed = false;
+          } else if (event.key === 'g') {
+            gPressed = false;
           }
         });
-      });
-    </script>
+      </script>
   </body>
 </html>
