--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
         height: calc(50vh);
         background-color: rgb(32, 32, 32);
         border: calc(0.5vw) solid rgb(16, 16, 16);
-        border-radius: 0; /* set the border-radius to 0 to make only the border curved */
+        border-radius: 0;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+      }
+      body {
+        overflow: hidden;
+        background-color: black;
       }
     </style>
   </head>
