--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         height: calc(50vh);
         background-color: rgb(32, 32, 32);
         border: calc(0.5vw) solid rgb(16, 16, 16);
-        border-radius: 50;
+        border-radius: 50%;
         position: absolute;
         top: 50%;
         left: 50%;
