--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
             tally = 69;
           }
           tallyElement.textContent = `Fucks given to Linus: ${tally}/69`;
+          if (tally >= 69) {
+            boxElement.style.display = "block";
+          }
         });
       });
 
