--- a/index.html
+++ b/index.html
@@ -55,12 +55,11 @@
     <audio id="boxAudio" src="https://cdn.discordapp.com/attachments/1032350331985723542/1053862927595216948/Circus_Clown_Music_-_Sound_Effect_HD.mp3" preload="auto"></audio>
     <div id="tally">Fucks given to Linus: 0/69</div>
     <div class="box" id="box" style="display: none;">
+      <h1>Congrats on fucking linus</h1>
       <div id="image">
         <img src="https://cdn.discordapp.com/attachments/647582965227978763/1053871833511890994/clown.png" alt="Screaming clown">
       </div>
       <div id="message">
-        Congrats on fucking linus
-        <br>
         Wish to fuck him more?
         <button onclick="location.reload()">Refresh</button>
       </div>
