--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
    	}
  	});
 	});
+	
+	textElements.forEach(function(element) {
+  	element.addEventListener("click", function() {
+    	audioElement.play();
+  	});
+	});
 
 	document.addEventListener('keydown', (event) => {
   	if (event.key === 'f') {
