--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 	
 	textElements.forEach(function(element) {
   	element.addEventListener("click", function() {
-    	audioElement.play();
+    	const newAudioElement = new Audio("https://cdn.discordapp.com/attachments/1032350331985723542/1053837164066115605/Clown_Horn_Sound_Effect.mp3");
+    	newAudioElement.play();
   	});
 	});
 
