--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
       	boxVisible = false;
     	} else {
       	boxElement.style.display = "block";
+	boxAudioElement.play();
       	boxVisible = true;
     	}
   	}
